@@ -1,6 +1,12 @@
 *** WooCommerce Shipping & Tax Changelog ***
+
 = 1.25.10 - 2021-xx-xx =
+* Tweak - Removes deprecated Jetpack constant JETPACK_MASTER_USER
+* Fix	  - Ensure status page is displayed on new WC navigation menu.
 * Add   - Add an endpoint for shipping label creation eligibility and share code for store eligibility.
+* Add   - Run phpcbf as a pre-commit rule.
+* Fix   - Fix PHPUnit tests. Rename `test_` to `test-` to match our phpcs rules. Remove travis and move to github action.
+* Tweak - Updated .nvmrc to use 10.16.0
 
 = 1.25.9 - 2021-03-17 =
 * Add   - WC Admin notice about DHL live rates.
